test: Added DriverTestsuite tests for each supported types (both single item and multi-item)